fixed gapping issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,7 +11,7 @@
 }
 
 .extraLinks {
-  margin-bottom: 20px;
+  margin-bottom: 63px;
   display: flex;
   flex-direction: column;
 }
